[package]
name = "mytest2"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmos-sdk-proto = { version = "0.16", default-features = false, path = "../cosmos-sdk-proto" }
ecdsa = { version = "0.16", features = ["std"] }
eyre = "0.6"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = { version = "0.32", features = ["secp256k1"] }
thiserror = "1"

# optional dependencies
bip32 = { version = "0.5", optional = true }
tendermint-rpc = { version = "0.29", optional = true, features = ["http-client"] }
tokio = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex-literal = "0.3"

[features]
default   = ["bip32"]
cosmwasm  = ["cosmos-sdk-proto/cosmwasm"]
dev       = ["rpc", "tokio"]
grpc      = ["cosmos-sdk-proto/grpc-transport", "grpc-core"]
grpc-core = ["cosmos-sdk-proto/grpc"]
rpc       = ["tendermint-rpc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
